[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/chars/pebbles.png" type="Texture" id=1]
[ext_resource path="res://Towers/Tirador.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 88.3629

[node name="Tirador" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="bullet_position" type="Position2D" parent="."]
position = Vector2( 16, 6 )

[node name="attack_cd" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="attack_area" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="attack_area" to="." method="_on_attack_area_area_exited"]
[connection signal="timeout" from="attack_cd" to="." method="_on_attack_cd_timeout"]
